# tiled-json-rs

./: .drone.yml  .gitlab-ci.yml  .rustfmt.toml  Cargo.toml  README.md
src/: layer.rs  lib.rs  map.rs  object.rs  parsers.rs  tile_set.rs  utils.rs  wangs.rs
tests/: test_layers.rs  test_load.rs  test_map_basic.rs  test_object_types.rs  test_tileset.rs
tests/data/: b64zlib.json  base64.json  csv.json  external_objects.json  external_tileset.json  point_template.json  tile_template.json  tileset.json
